Fixing caps lock issues for inputs, fixing data not storing after refresh, removing irish puzzle testing feature, set the start date to align irish puzzles with wednesdays, added mobile share support, fixed fonts on stats screen, updated readme, and added variables at the top of script.js to adjust mobile share support, and puzzle start date.

--- a/styles.css
+++ b/styles.css
@@ -196,6 +196,10 @@ h3 {
 }
 
 h4 {
+    font-weight: bold;
+}
+
+h5 {
     font-family: 'Times New Roman', Times, serif;
     font-weight: bold;
     font-size: 3em;
